@@ -1,5 +1,17 @@
 2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>
 
+        Update version numbers to 1.3.3.
+
+        * configure:
+        * configure.in:
+        * src/pkgIndex.tcl:
+        * src/jacl/tcl/lang/Interp.java:
+        * src/tcljava/tcl/lang/BlendExtension.java:
+        * unix/tools/vutil/current:
+        * win/makefile.vc:
+
+2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>
+
         * configure: Regen.
         * configure.in: Set default --prefix to /usr/local.
 
